--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "license": "UNLICENSED",
   "scripts": {
-    "dev": "export THEME_MODULE=\"`pwd`/src/index\" && export THEME_EXPORT=DEMO && cd node_modules/@public-ui/sample-react/ && pnpm start"
+    "serve": "export THEME_MODULE=\"`pwd`/src/index\" && export THEME_EXPORT=DEMO && cd node_modules/@public-ui/sample-react/ && pnpm start"
   },
   "devDependencies": {
     "@public-ui/sample-react": "^2.0.3",
