--- a/.github/workflows/update-snapshots.yml
+++ b/.github/workflows/update-snapshots.yml
@@ -1,4 +1,4 @@
-name: Update Snapshots
+name: 03 - Update Snapshots
 
 on:
   workflow_dispatch:
@@ -13,7 +13,6 @@ on:
 
 jobs:
   update-snapshots:
-    if: github.repository == 'public-ui/kolibri-demo-theme'
     runs-on: ubuntu-latest
     permissions:
       # Give the default GITHUB_TOKEN write permission to commit and push the
@@ -33,7 +32,7 @@ jobs:
           node-version: 20
 
       - name: Install pnpm
-        uses: pnpm/action-setup@v3
+        uses: pnpm/action-setup@v2
         id: pnpm-install
         with:
           version: 8
@@ -45,7 +44,7 @@ jobs:
         run: echo "STORE_PATH=$(pnpm store path)" >> $GITHUB_OUTPUT
 
       - name: Setup pnpm cache
-        uses: actions/cache@v4
+        uses: actions/cache@v3
         with:
           path: ${{ steps.pnpm-cache.outputs.STORE_PATH }}
           key: ${{ runner.os }}-pnpm-store
@@ -59,6 +58,7 @@ jobs:
         run: pnpm -r build
 
       - name: Purge existing snapshots
+        continue-on-error: true
         if: ${{ github.event.inputs.purge_snapshots == 'true' }}
         run: rm packages/themes/**/snapshots/**/*.png
 
